--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -971,7 +971,9 @@ section {
 }
 
 .menu .menu-content::after {
-  content: "......................................................................" "...................................................................." "....................................................................";
+  content: "......................................................................"
+ "...................................................................."
+ "....................................................................";
   position: absolute;
   left: 20px;
   right: 0;
@@ -1530,7 +1532,7 @@ section {
   font-weight: 400;
   font-size: 13px;
 }
-
+/* 
 .contact .php-email-form .error-message {
   display: none;
   color: #fff;
@@ -1538,7 +1540,7 @@ section {
   text-align: center;
   padding: 15px;
   font-weight: 600;
-}
+} */
 
 .contact .php-email-form .sent-message {
   display: none;
